--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div id="appPage" class="hidden p-6">
     <div class="max-w-3xl mx-auto bg-white rounded-xl shadow-md p-6">
       <h2 class="text-2xl font-bold mb-6 text-center">🔐 RSA Encryption & QR Tool</h2>
-      
+
       <!-- MENU -->
       <div class="flex justify-center space-x-4 mb-6">
         <button onclick="showTab('encrypt')" class="bg-green-600 text-white px-4 py-2 rounded">Enkripsi</button>
@@ -33,73 +33,44 @@
       <!-- ENCRYPT MENU -->
       <div id="encryptTab">
         <div class="grid grid-cols-2 gap-4 mb-4">
-          <div>
-            <label class="text-sm">p (prime):</label>
-            <input type="number" id="p" class="w-full border px-2 py-1 rounded">
-          </div>
-          <div>
-            <label class="text-sm">q (prime):</label>
-            <input type="number" id="q" class="w-full border px-2 py-1 rounded">
-          </div>
-          <div class="col-span-2">
-            <label class="text-sm">e (public exponent):</label>
-            <input type="number" id="e" class="w-full border px-2 py-1 rounded">
-          </div>
+          <input type="number" id="p" placeholder="p (prime)" class="w-full border px-2 py-1 rounded">
+          <input type="number" id="q" placeholder="q (prime)" class="w-full border px-2 py-1 rounded">
+          <input type="number" id="e" placeholder="e (public exponent)" class="col-span-2 w-full border px-2 py-1 rounded">
         </div>
-
-        <div class="mb-4">
-          <label class="text-sm">Plaintext (ID Surat):</label>
-          <input type="text" id="plaintext" class="w-full border px-2 py-1 rounded">
-        </div>
-
-        <button onclick="encrypt()" class="bg-green-700 text-white px-4 py-2 rounded w-full mb-4">
-          🔐 Encrypt & Generate QR
-        </button>
-
+        <input type="text" id="plaintext" placeholder="Plaintext (ID Surat)" class="w-full border px-2 py-1 rounded mb-4">
+        <button onclick="encrypt()" class="bg-green-700 text-white px-4 py-2 rounded w-full mb-4">🔐 Encrypt & Generate QR</button>
         <div class="grid grid-cols-2 gap-4 mb-4">
-          <input type="text" id="n" class="w-full border px-2 py-1 rounded bg-gray-100" placeholder="n" readonly>
-          <input type="text" id="d" class="w-full border px-2 py-1 rounded bg-gray-100" placeholder="d" readonly>
+          <input type="text" id="n" placeholder="n" class="w-full border px-2 py-1 rounded bg-gray-100" readonly>
+          <input type="text" id="d" placeholder="d" class="w-full border px-2 py-1 rounded bg-gray-100" readonly>
         </div>
-
-        <div class="text-center mb-6">
-          <canvas id="qrcode-canvas" class="mx-auto"></canvas>
-          <button onclick="downloadQR()" class="mt-2 bg-purple-600 text-white px-4 py-2 rounded">⬇️ Simpan QR</button>
-        </div>
+        <canvas id="qrcode-canvas" class="mx-auto"></canvas>
+        <button onclick="downloadQR()" class="mt-4 bg-purple-600 text-white px-4 py-2 rounded w-full">⬇️ Simpan QR</button>
       </div>
 
       <!-- DECRYPT MENU -->
       <div id="decryptTab" class="hidden">
         <div class="grid grid-cols-2 gap-4 mb-4">
-          <div>
-            <label class="text-sm">p:</label>
-            <input type="number" id="p_dec" class="w-full border px-2 py-1 rounded">
-          </div>
-          <div>
-            <label class="text-sm">q:</label>
-            <input type="number" id="q_dec" class="w-full border px-2 py-1 rounded">
-          </div>
-          <div class="col-span-2">
-            <label class="text-sm">e:</label>
-            <input type="number" id="e_dec" class="w-full border px-2 py-1 rounded">
-          </div>
+          <input type="number" id="p_dec" placeholder="p" class="w-full border px-2 py-1 rounded">
+          <input type="number" id="q_dec" placeholder="q" class="w-full border px-2 py-1 rounded">
+          <input type="number" id="e_dec" placeholder="e" class="col-span-2 w-full border px-2 py-1 rounded">
         </div>
-
         <div class="mb-4">
           <label class="text-sm font-semibold">📷 Upload QR Code:</label>
           <input type="file" accept="image/*" onchange="scanQR(event)" class="block mt-2">
         </div>
 
         <div class="mb-4">
-          <label class="text-sm">Ciphertext dari QR:</label>
-          <textarea id="ciphertextInput" rows="4" class="w-full border px-2 py-1 rounded"></textarea>
+          <label class="text-sm font-semibold">📸 atau Scan Kamera:</label>
+          <div class="relative">
+            <video id="video" class="w-full border rounded" autoplay></video>
+            <canvas id="qr-canvas" class="hidden"></canvas>
+          </div>
+          <button onclick="startCamera()" class="bg-indigo-600 text-white px-4 py-2 rounded w-full mt-2">▶️ Mulai Scan</button>
         </div>
 
+        <textarea id="ciphertextInput" rows="4" class="w-full border px-2 py-1 rounded mb-4" placeholder="Hasil scan ciphertext QR akan muncul di sini..."></textarea>
         <button onclick="decrypt()" class="bg-red-700 text-white px-4 py-2 rounded w-full mb-4">🔓 Decrypt</button>
-
-        <div>
-          <label class="text-sm">Plaintext Hasil Dekripsi:</label>
-          <textarea id="decryptedText" rows="2" class="w-full border px-2 py-1 rounded bg-gray-100" readonly></textarea>
-        </div>
+        <textarea id="decryptedText" rows="2" class="w-full border px-2 py-1 rounded bg-gray-100" readonly placeholder="Hasil Plaintext..."></textarea>
       </div>
     </div>
   </div>
@@ -221,6 +192,37 @@
         document.getElementById("decryptedText").value = chars.join("");
       } catch (err) {
         alert("Dekripsi gagal: " + err);
+      }
+    }
+
+    // QR CAMERA SCANNER
+    let videoStream;
+    function startCamera() {
+      const video = document.getElementById("video");
+      navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
+        .then(stream => {
+          videoStream = stream;
+          video.srcObject = stream;
+          video.setAttribute("playsinline", true);
+          video.play();
+          scanVideoFrame();
+        }).catch(err => alert("Kamera gagal dimuat: " + err));
+    }
+
+    function scanVideoFrame() {
+      const video = document.getElementById("video");
+      const canvas = document.getElementById("qr-canvas");
+      const ctx = canvas.getContext("2d");
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+      const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+      const code = jsQR(imageData.data, canvas.width, canvas.height);
+      if (code) {
+        document.getElementById("ciphertextInput").value = code.data;
+        videoStream.getTracks().forEach(t => t.stop());
+      } else {
+        requestAnimationFrame(scanVideoFrame);
       }
     }
   </script>
