--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <!-- SCRIPT -->
   <script>
-    const credentials = { username: "admin", password: "123456" };
+    const credentials = { username: "admin", password: "admin123" };
 
     function login() {
       const user = document.getElementById("username").value;
